# GhostLM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORPUS.md  LICENSE  MODEL_CARD.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/logs_v1_pre_corpus_fix/: benchmark.json  benchmark_step_10000.json  benchmark_step_8000.json  eval_results.json  eval_security.json  training_log.json
data/: collect.py  ctf_repos.example.json
demo/: app.py  requirements.txt
docs/: ARCHITECTURE.md  architecture.md  dataset.md  devto_article.md  github_discussion.md  huggingface.md  training.md
ghostlm/: __init__.py  config.py  dataset.py  model.py  tokenizer.py  trainer.py
notebooks/: exploration.ipynb
scripts/: api.py  benchmark.py  chat.py  collect_ctf_repos.py  collect_nvd_full.py  data_audit.py  data_stats.py  eval_security.py  evaluate.py  export.py  gen_synthetic.py  generate.py  plot_phase_comparison.py  plot_training.py  push_to_hub.py  rebuild_corpus.py  resume_train.sh  train.py
tests/: test_data.py  test_model.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
