[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlm"
version = "0.1.0"
description = "An open-source cybersecurity-focused language model built from scratch"
authors = [{name = "Joe Munene"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostlm*"]
