[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlm"
version = "0.2.0"
description = "An open-source cybersecurity-focused language model built from scratch"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Joe Munene"}]
requires-python = ">=3.10"
keywords = ["machine-learning", "cybersecurity", "transformer", "pytorch", "language-model", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "transformers>=4.36.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
train = ["wandb>=0.16.0", "matplotlib>=3.8.0"]
export = ["safetensors>=0.4.0"]
data = ["datasets>=2.16.0", "tokenizers>=0.15.0", "requests>=2.31.0"]
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/joemunene-by/GhostLM"
Repository = "https://github.com/joemunene-by/GhostLM"
Issues = "https://github.com/joemunene-by/GhostLM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostlm*"]
